- Fixing contrast "error" for contact button again.

--- a/style/index.css
+++ b/style/index.css
@@ -114,7 +114,7 @@ header {
 
 button {
   padding: 9px 25px;
-  background-color: rgb(0, 138, 192);
+  background-color: rgb(0, 90, 192);
   border: none;
   border-radius: 50px;
   cursor: pointer;
@@ -125,7 +125,7 @@ button {
 
 button:hover {
   background-color: white;
-  color: rgba(14, 183, 205, 1);
+  color: rgb(0, 90, 192);
 }
 
 .header-text {
